...
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">SignUp</string>
    <string name="error_auth">Authentication failed.</string>
    <string name="facebook_app_id">266538914039794</string>
    <string name="fb_login_protocol_scheme">fb266538914039794</string>
    <string name="sign_out">Sign out</string>
    <string name="add">+</string>

    <!-- String related to scanner -->
    <string name="take_picture">TAKE PICTURE</string>
    <string name="invalid_password_registration">Password at least 6 characters</string>
    <string name="invalid_email_format">Invalid email contentType</string>
    <string name="email_already_used">email already in use</string>
    <string name="format_not_recognized">Format not recognized, please check it!!</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_viewer_description">IMAGE VIEWER</string>
    <string name="no_operation">operation not yet implemented</string>
    <string name="play_string">Play</string>
...
    <string name="pathname_chooser">pathname chooser</string>
    <string name="delition_failed">Delition failed!</string>
    <string name="already_at_root_level">You are already at root level</string>
    <string name="no_files_associated">There are no files associated with this qr code</string>
    <string name="settings_points_string">⋮</string>
    <string name="enter_email_string">Enter email</string>
    <string name="register_string">Register</string>
    <string name="empty_string" />
    <string name="files_string">FILES</string>
    <string name="scanner_string">SCANNER</string>
    <string name="save_file_string">Save File</string>
    <string name="delete_file_string">Delete File</string>
    <string name="get_qrcode_string">Get QR Code</string>
...
    <string name="root_string">home</string>
    <string name="default_folder_string">my_folder</string>
    <string name="confirm_upper_string">Confirm</string>
    <string name="cancel_upper_string">Cancel</string>
    <string name="yes_upper_string">YES</string>
    <string name="no_upper_string">NO</string>
    <string name="null_email">Please insert the email</string>
    <string name="null_password">Please insert a password</string>
    <string name="option_string">Option</string>
    <string name="email_used_string">Email used:</string>
    <string name="display_name_string">Display name:</string>
    <string name="version">version 1.0.0</string>
    <string name="total_space_used">Total space used:</string>
    <string name="file_number_stored">File stored:</string>
...
