...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="@dimen/single_item_dimension"
    android:background="?android:attr/selectableItemBackground">

    <include layout="@layout/content_storage_element" android:id="@+id/content" />

</RelativeLayout>
